[metadata]
# replace with your username:
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/ppecheux/url-hostname/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
