[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/ppecheux/url-hostname/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
license_file = LICENSE


[pylint]
ignore = C0116, C0115, C0114, W0122, W0212  

[tool:pytest]
addopts = --cov=url_hostname -v
filterwarnings=error
norecursedirs = dist docs build .tox .eggs venv virtualenv .git
minversion = 3.8.2
testpaths = tests/


[flake8]
ignore = E203,E301,E302,E704,W503,W504,F811
max-line-length = 88